package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_runtime")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "WORKSPACE",
        "//databricks:all_files",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "cli",
    actual = "@rules_databricks//databricks:cli",
)

py_runtime(
    name = "py_runtime",
    interpreter_path = select({
        "@bazel_tools//tools/python:PY2": "/usr/bin/python2",
        "@bazel_tools//tools/python:PY3": "/usr/bin/python3",
    }),
)
