# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@subpar//:subpar.bzl", "par_binary")
load("@databricks_pip_deps//:requirements.bzl", "requirement")
# load("@rules_python//python:defs.bzl", "py_runtime")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

py_runtime(
    name = "py_runtime",
    interpreter_path = select({
        "@bazel_tools//tools/python:PY2": "/usr/bin/python2",
        "@bazel_tools//tools/python:PY3": "/usr/bin/python3",
    }),
)

par_binary(
    name = "cli",
    srcs = ["@databricks_src//:src"],
    deps = [
        requirement("certifi"),
        requirement("click"),
        requirement("configparser"),
        requirement("PyYAML"),
        requirement("requests"),
        requirement("six"),
        requirement("tabulate"),
        requirement("urllib3"),
    ],
    visibility = ["//visibility:public"],
    python_version = "PY3",
    main = "@databricks_src//:databricks_cli/cli.py",
)
