# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_binary")
load("@databricks_pip_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:private"])

licenses(["notice"])  # Apache 2.0

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "cli",
    srcs = ["@databricks_src//:src"],
    main = "@databricks_src//:databricks_cli/cli.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("certifi"),
        requirement("click"),
        requirement("configparser"),
        requirement("PyYAML"),
        requirement("requests"),
        requirement("six"),
        requirement("tabulate"),
        requirement("urllib3"),
    ],
)
