package(default_visibility = ["//visibility:private"])

load("@databricks_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "cli",
    srcs = ["@databricks_src//:src"],
    main = "@databricks_src//:databricks_cli/cli.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("certifi"),
        requirement("click"),
        requirement("configparser"),
        requirement("PyYAML"),
        requirement("requests"),
        requirement("six"),
        requirement("tabulate"),
    ],
)
