load("@rules_databricks//databricks:defs.bzl", "dbk_configure", "dbk_fs", "dbk_libraries")

dbk_configure(
    name = "cfg",
    cluster_name = "{AZ_DEV_DF_CLUSTER_NAME}",
    profile = "{AZ_DEV_DF_CLUSTER_PROFILE}",
)

dbk_fs(
    name = "fs",
    configure = ":cfg",
    files = ["dummy.jar"],
    stamp = "{STABLE_GIT_DATE}",
)

dbk_libraries(
    name = "lib",
    configure = ":cfg",
    dbfs = ":fs.cp",
)
