load("@rules_databricks//databricks:defs.bzl", "dbk_configure", "dbk_fs", "dbk_libraries", "dbk_instance_pools")

dbk_configure(
    name = "cfg",
    cluster_name = "{STABLE_AZ_DEV_DF_CLUSTER_NAME}",
    profile = "{STABLE_AZ_DEV_DF_CLUSTER_PROFILE}",
)

dbk_fs(
    name = "fs",
    configure = ":cfg",
    files = ["dummy.jar"],
    stamp = "{STABLE_GIT_DATE}",
)

dbk_libraries(
    name = "lib",
    configure = ":cfg",
    dbfs = ":fs.cp",
)

dbk_instance_pools(
    name = "pools",
    configure = ":cfg",
    json_file = "pools.json",
    substitutions = {
        "%{INSTANCE_POOL_NAME}": "instance_pool_test"
    }
)
