# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@databricks_cli_import_dev//:requirements.bzl", dev_requirement = "requirement")
load("@databricks_cli_import//:requirements.bzl", "requirement")

load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

py_binary(
    name = "cli",
    srcs = ["@databricks_cli_src//:src"],
    deps = [
        dev_requirement("tox"),
        requirement("click"),
        requirement("configparser"),
        requirement("requests"),
        requirement("urllib3"),
        requirement("chardet"),
        requirement("certifi"),
        requirement("tabulate"),
    ],
    visibility = ["//visibility:public"],
    # python_version = "PY2",
    main = "databricks_cli_src/databricks_cli/cli.py",
)
