# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":toolchain.bzl", "databricks_toolchain")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "databricks",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
)

databricks_toolchain(
    name = "default_toolchain_impl",
    client_config = "~/.databrickscfg",
    tool_target = "@rules_databricks//databricks:cli",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default_linux_toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    toolchain = "@databricks_config//:toolchain",
    toolchain_type = ":toolchain_type",
)
