package(default_visibility = ["//visibility:private"])

load("@databricks_pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "main",
    srcs = ["main.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [requirement("configparser")],
)
